message UpdateCurrencyRequest {
    required uint32 user_id = 1;
    required uint64 currency = 2;
    required int32  delta = 3;
};

message PeerTextChatMessage {
    required uint32 sender_user_id = 1;
    required string text = 2;
};

message KickSeatResponse {
    required bool avoid_be_kicked = 1;
};

message AcceptFriendRequest {
    required uint32 target_user_id = 1;
    optional string tencent_nick_name = 2; 
};

message ThrowFlyKissResponse {
};

message TextChatRequest {
    required string text = 1;
};

message PlayerLogonElse {
};

message HitLine {
    required uint32 hit_points = 1;
};

message PeerThrowEgg{
    required uint32 user_id = 1;
    required uint32 target_user_id = 2;
};

message FeatureResult {
    repeated SpinResult spin_results = 1;
    repeated uint32 total_win = 2;
};

message EnterGameRequest {
    required uint32 user_id = 1;
    required string token = 2;
    optional string version = 3;
    required uint32 map_id = 4;
};

message MakeFriendRequest {
    required uint32 user_id = 1;
    optional string tencent_nick_name = 2; 
    required uint32 request_id = 3; 
};

message VoiceChatResponse {
};

message EnterGameResponse {
    required uint64 currency = 1;
};

message GameResult {
    required SpinResult base_result = 1;
    optional FeatureResult feature_result = 2;
    required uint32 currency = 3;
};

message InnerTest{
    required uint32 num = 1;
    required string str = 2;
    required bool bb = 3;
};

message ThrowFlyKissRequest {
    required uint32 target_user_id = 1;
};

message EchoTest {
    required uint32 num = 1;
    required string str = 2;
    required bool bb = 3;
    required InnerTest inner = 4;
    repeated InnerTest rep = 5;
};

message PeerSendGift {
    required uint32 user_id = 1;
    optional string nick_name = 2;
    required uint32 target_user_id = 3;
    required uint32 gift_id = 4;
};

message UpdateGamedTimeRequest {
    required uint32 user_id = 1;
    required uint32 gamed_time = 2;
};
message CellSymbol {
    required uint32 symbol_id = 1;
};

message DeclineFriendRequest {
    required uint32 target_user_id = 1;
    optional string tencent_nick_name = 2; 
};

message SpinRequest {
    required uint32 stake_currency = 1;  
};

message PeerVoiceChatMessage {
    required uint32 sender_user_id = 1;
    required uint32 voice_id = 2;
};

message KickSeatRequest {
    required uint32 target_user_id = 1;
};

message EmoticonChatResponse {
};

message UpdateProfileRequest {
    required uint32 user_id = 1;
    optional string nick_name = 2;
    optional string figure_url = 3;
    optional bool is_active = 4;
};

message EmoticonChatRequest {
    required uint32 emoticon_id = 1;
};

message PeerThrowFlyKiss{
    required uint32 user_id = 1;
    required uint32 target_user_id = 2;
};

message TextChatResponse {
};

message SpinResult {
    repeated ColSymbolResult window_symbols = 1;
    repeated HitLine hit_lines = 2;
    required uint32 win_currency = 3;
    required uint64 currency = 4;
    required bool trigger_feature = 5;
};

message ThrowEggRequest {
    required uint32 target_user_id = 1;
};

message ThrowEggResponse {
};

message LeaveGameResponse {
};

message PeerEmoticonChatMessage {
    required uint32 sender_user_id = 1;
    required uint32 emoticon_id = 2;
};

message ColSymbolResult {
    repeated CellSymbol col_symbols = 1; 
};

message VoiceChatRequest {
    required uint32 voice_id = 1;
};

message PeerKickSeat{
    required uint32 user_id = 1;
    required uint32 target_user_id = 2;
    required bool avoid_be_kicked  = 3;
};

